# dragg

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  aggregator.py  docker-compose.yml  main.py  reformat.py  requirements.txt  setup.cfg  setup.py  tox.ini
career_comp/: agent.py  player.py  rl_aggregator.py
career_comp/data/: config.toml  waterdraw_profiles.csv
career_comp/data/rl_data/: state_action.json
deploy/: .dockerignore  Dockerfile  docker-compose.yml  start_worker.sh
docs/source/: conf.py  dragg.devices.rst  dragg.rst  getting_started.rst  index.rst
dragg/: Dockerfile  __init__.py  agent.py  aggregator.py  aggregator_logger.py  batch.sh  battery_system.py  dual_action_agent.py  duel_action_agent.py  dump.rdb  home_hvac_system.py  logger.py  main.py  mpc_calc.py  mpc_calc_logger.py  my_agents.py  player.py  plot.py  plotter.py  pv_system.py  redis_client.py  reformat.py  reformat_logger.py  reformat_q.py  rl_aggregator.py  rl_player.py  test.py  view_plots.ipynb  water_heater_system.py
dragg/data/: config-template.json  config-template.toml  config.json  config.toml  nsrdb.csv  site_info.csv  tou_data.xlsx  waterdraw_profiles.csv
dragg/devices/: __init__.py  battery.py  electric_vehicle.py  hvac.py  pv.py  water_heater.py
dragg/outputs/: all_homes-1-config.json  all_homes-10-config.json  all_homes-20-config.json  notes.txt
dragg/outputs/images/0730T094757/: notes.txt
dragg/outputs/images/0730T100420/: notes.txt
dragg/twin_q/: all_homes-20-config.json
(+375 files in other folders)
