;# This file is used to configure your project.
;# Read more about the various options under:
;# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
;
;[metadata]
;name = dragg
;description = Distributed Resource Aggregation
;author = Cory Mosiman
;author-email = cory.mosiman@nrel.gov
;license = MIT
;long-description = file: README.md
;long-description-content-type = text/x-rst; charset=UTF-8
;url = https://github.com/pyscaffold/pyscaffold/
;project-urls =
;    Documentation = https://pyscaffold.org/
;# Change if running only on Windows, Mac or Linux (comma-separated)
;platforms = any
;# Add here all kinds of additional classifiers as defined under
;# https://pypi.python.org/pypi?%3Aaction=list_classifiers
;classifiers =
;    Development Status :: 4 - Beta
;    Programming Language :: Python
;
;[options]
;zip_safe = False
;packages = find:
;include_package_data = True
;# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
;setup_requires = pyscaffold>=3.2a0,<3.3a0
;# Add here dependencies of your project (semicolon/line-separated), e.g.
;# install_requires = numpy; scipy
;# The usage of test_requires is discouraged, see `Dependency Management` docs
;# tests_require = pytest; pytest-cov
;# Require a specific Python version, e.g. Python 2.7 or >= 3.4
;# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
;
;[options.packages.find]
;;where = dragg
